<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score">

    <EditText
        android:id="@+id/title_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/date_"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@+id/label1"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_project"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:text="@string/Presence"
        android:textSize="20sp"
        android:textStyle="bold" />
        <CheckBox
            android:id="@+id/morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:layout_alignBaseline="@+id/label1"
            android:layout_toEndOf="@+id/label1"
            android:layout_marginStart="20dp"
            />
        <CheckBox
            android:id="@+id/afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afternoon"
            android:layout_alignStart="@+id/morning"
            android:layout_below="@+id/morning"
            android:layout_toEndOf="@+id/label1"
            />
        <CheckBox
            android:id="@+id/evening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:layout_alignStart="@+id/morning"
            android:layout_below="@+id/afternoon"
            android:layout_toEndOf="@+id/label1"
            />
    <Button
        android:id="@+id/edit_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evening"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/save"/>


</RelativeLayout>