<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditProject">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/title_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/info_of_the_project"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/title_project"
                android:layout_marginStart="30dp"
                android:text="@string/name_cap"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_page"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:layout_toRightOf="@+id/label1"
                android:ems="10"
                android:hint="@string/Title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label1"
                android:minHeight="48dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/date_start"
                android:layout_marginStart="30dp"
                android:text="@string/date_start"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_project"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:layout_toRightOf="@+id/label2"
                android:ems="10"
                android:hint="@string/date_start"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label2"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/date_end"
                android:layout_marginStart="30dp"
                android:text="@string/date_end"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_start"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/date_end"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label3"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/client_name"
                android:layout_marginStart="30dp"
                android:text="@string/client_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_end"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/client_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label4"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/address"
                android:layout_marginStart="30dp"
                android:text="@string/address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/client_name"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label5"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/phone"
                android:layout_marginStart="30dp"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label6"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/email"
                android:layout_marginStart="30dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_alignStart="@+id/employee_name"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label7"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/employee_name"
                android:layout_marginStart="30dp"
                android:text="@string/employee_name"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_toRightOf="@+id/label8"
                android:ems="10"
                android:hint="@string/employee_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/label8"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/label9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label8"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label9"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custem_edit_text"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:labelFor="@+id/label9"
                android:minHeight="48dp"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/edit_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/edit" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>